# TapChat

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  test.mjs
.github/workflows/: release.yml
app/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
app/desktop/docs/: CLOUDFLARE_PRECOMPILED_ARCHITECTURE.md
app/desktop/runtime/: README.md
app/desktop/scripts/: build-portable.mjs  prepare-desktop-runtime.mjs
app/desktop/src/: App.tsx  main.tsx  styles.css
app/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/embedded/wrangler/: login.mjs  package.json  whoami.mjs
app/desktop/src-tauri/icons/: icon.icns
app/desktop/src-tauri/src/: lib.rs  lifecycle.rs  main.rs  runtime_auth.rs  state.rs
app/desktop/src-tauri/src/commands/: attachment_settings.rs  cloudflare.rs  cloudflare_rest.rs  contact.rs  conversation.rs  identity.rs  message.rs  mod.rs  profile.rs  request.rs  session.rs  utility.rs
app/desktop/src-tauri/src/platform/: mod.rs  persistence.rs  profile.rs  realtime.rs  transport.rs
app/desktop/src-tauri/src/ports/: blob_io.rs  mod.rs  notification.rs  persistence.rs  realtime.rs  timer.rs  transport.rs
app/desktop/src/app/: DesktopErrorBoundary.tsx  MainApp.tsx  OnboardingApp.tsx  RootApp.tsx  formatters.ts  rendererDiagnostics.ts  types.ts  useDesktopController.tsx  useTheme.ts
app/desktop/src/components/: AttachmentCard.tsx  AttachmentPreview.tsx  ImageGrid.tsx  MediaLightbox.tsx  MessageInput.tsx  SystemBanner.tsx
app/desktop/src/components/conversation/: ConversationView.tsx
app/desktop/src/components/drawers/: DiagnosticsDrawer.tsx  PolicyDrawer.tsx  RuntimeDrawer.tsx
app/desktop/src/components/icons/: RailIcons.tsx
app/desktop/src/components/navigation/: ChatsPane.tsx  ContactsPane.tsx  RequestsPane.tsx
app/desktop/src/components/onboarding/: ChooseProfileStep.tsx  CloudflareSetupStep.tsx  IdentityStep.tsx  MnemonicBackupStep.tsx  OnboardingLayout.tsx
app/desktop/src/components/shared/: AttachmentDraftQueue.tsx  Banner.tsx  ContactQrModal.tsx  ImagePreviewModal.tsx  InfoCard.tsx  ToastHost.tsx
app/desktop/src/components/shell/: GlobalRail.tsx  ProfileSwitcherPopover.tsx
app/desktop/src/hooks/: index.ts  useAutoUpdate.ts  useCoreUpdate.ts  useKeyboardShortcuts.ts  useNotifications.ts
app/desktop/src/lib/: commands.ts  index.ts  tauri.ts  types.ts
app/desktop/src/pages/chat/: ChatLayout.tsx  ChatView.tsx  ConversationList.tsx
app/desktop/src/pages/contacts/: ContactDetail.tsx  ContactList.tsx
app/desktop/src/pages/onboarding/: BackupMnemonic.tsx  CloudflareSetup.tsx  Complete.tsx  Identity.tsx  Welcome.tsx
app/desktop/src/pages/requests/: MessageRequests.tsx
app/desktop/src/pages/settings/: Devices.tsx  Runtime.tsx  Settings.tsx
app/desktop/src/store/: contacts.ts  conversations.ts  index.ts  requests.ts  session.ts
app/desktop/src/styles/: globals.css
crates/tapchat_phase10_adapter/: Cargo.toml
crates/tapchat_phase10_adapter/src/: driver.rs  runtime.rs
crates/tapchat_phase10_adapter/tests/: phase10_e2e.rs
crates/tapchat_transport_adapter/: Cargo.toml
crates/tapchat_transport_adapter/src/: driver.rs  lib.rs  runtime.rs  util.rs
crates/tapchat_transport_adapter/tests/: phase10_e2e.rs
scripts/: cleanup-test-temp.ps1
services/cloudflare/: DEPLOYMENT.md  DEPLOYMENT_CN.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
services/cloudflare/.test-runtime/: worker.mjs
services/cloudflare/.test-runtime-debug/: worker.mjs
services/cloudflare/.wrangler/tmp/bundle-1SssWi/: middleware-loader.entry.ts
services/cloudflare/.wrangler/tmp/bundle-Y4iBux/: middleware-insertion-facade.js  middleware-loader.entry.ts
services/cloudflare/.wrangler/tmp/dev-OiwLHp/: index.js  index.js.map
services/cloudflare/.wrangler/tmp/dev-tDKGKk/: index.js  index.js.map
services/cloudflare/bundled/: README.md  index.js  index.js.map
services/cloudflare/scripts/: cleanup-cloudflare.mjs  deploy-cloudflare.mjs  phase10-runtime.mjs  transport-runtime.mjs
services/cloudflare/src/: index.ts
services/cloudflare/src/auth/: capability.ts
services/cloudflare/src/inbox/: durable.ts  service.ts
services/cloudflare/src/routes/: http.ts
services/cloudflare/src/storage/: service.ts  shared-state.ts  sharing.ts
services/cloudflare/src/types/: cloudflare-globals.d.ts  contracts.ts  runtime.ts
services/cloudflare/test/: cloudflare.integration.test.ts  cloudflare.test.ts
src/: attachment_crypto.rs  contact_workflows.rs  desktop_app.rs  error.rs  lib.rs  logging.rs  main.rs  platform_ports.rs
src/capability/: mod.rs
src/cli/: app.rs  args.rs  driver.rs  mod.rs  profile.rs  runtime.rs  util.rs
src/conversation/: mod.rs
src/ffi_api/: engine.rs  mod.rs  tests.rs  types.rs
src/identity/: mod.rs
src/mls_adapter/: mod.rs
src/model/: mod.rs
src/persistence/: mod.rs
src/sync_engine/: mod.rs
src/transport_contract/: mod.rs
tests/: cli_e2e.rs  cli_e2e_stress.rs  desktop_message_request_e2e.rs
