[workspace]
members = [".", "crates/tapchat_transport_adapter"]
resolver = "2"

[package]
name = "TapChat"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
bip39 = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hmac = "0.12"
openmls = { version = "0.8.1", features = ["openmls_rust_crypto"] }
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
