[package]
name = "tapchat_desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "tapchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tapchat_core = { package = "TapChat", path = "../../.." }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
open = "5"
