[package]
name = "tapchat-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "tapchat_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
base64 = "0.22"
chrono = "0.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
http = "1"
urlencoding = "2.1"
url = "2.5"
log = "0.4"
tapchat_core = { path = "../../../", package = "TapChat" }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
